cmake_minimum_required(VERSION 3.24)
project(AeroPhysicalEngine)

set(CMAKE_CXX_STANDARD 17)
link_directories(${PROJECT_SOURCE_DIR}/lib)
add_executable(AeroPhysicalEngine APEmain.cpp)
add_definitions("-DUNICODE" "-D_UNICODE")
target_link_libraries(${PROJECT_NAME} gdi32.dll)

project(WindowsAPITest)
set(CMAKE_CXX_STANDARD 17)
link_directories(${PROJECT_SOURCE_DIR}/lib)
add_executable(WindowsAPITest WindowsAPI.cpp)
add_definitions(-DUNICODE -D_UNICODE)
target_link_libraries(${PROJECT_NAME} gdi32.dll)